--- a/styles.css
+++ b/styles.css
@@ -214,7 +214,7 @@ div a{
     width: 150px; 
     height: auto;
     display: block;
-    margin: 0 auto 20px; /* Center the logo and add spacing below */
+    margin: 0 auto 20px; 
 }
 
 #controls {
@@ -298,3 +298,7 @@ hr {
     transform: scale(1.05); /* Slight zoom on hover */
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.2);
   }
+
+
+
+  
